--- a/Assignment 1 23-24.ipynb
+++ b/Assignment 1 23-24.ipynb
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -411,10 +411,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3364.4293857307684\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_2g = regr.intercept_[0] + regr.coef_[0][0]*50\n",
+    "print(result_2g)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -425,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -445,17 +456,11 @@
     "regr = LinearRegression()\n",
     "regr.fit(X,y)\n",
     "\n",
-    "\n",
     "print('body_mass_g = {:.4f} + {:.4f} * culmen_length_mm + {:.4f} * culmen_depth_mm + {:.4f} * flipper_length_mm'.format(regr.intercept_[0], regr.coef_[0][0], regr.coef_[0][1],regr.coef_[0][2]))\n",
-    "\n",
     "\n",
     "body_mass_g_pred = regr.predict(X)\n",
     "r2_value = r2_score(y, body_mass_g_pred)\n",
-    "print('R^2: {:.4f}'.format(r2_value))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print('R^2: {:.4f}'.format(r2_value))"
    ]
   },
   {
@@ -494,7 +499,8 @@
     "regr.fit(X,y)\n",
     "\n",
     "body_mass_g_pred = regr.predict(X)\n",
-    "r2_value = r2_score(y, body_mass_g_pred)\n"
+    "r2_value = r2_score(y, body_mass_g_pred)\n",
+    "\n"
    ]
   },
   {
