o tiago é que mandou

--- a/Assignment 1 23-24.ipynb
+++ b/Assignment 1 23-24.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -215,7 +215,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,12 +236,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2.b)** Discard any row that has a missing value."
+    "#### **2.b)** Discard any row that has a missing value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -521,11 +521,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "166"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = int(len(df)/2)\n",
+    "\n",
+    "## Obtain the training indices\n",
+    "idxs_train = df['Year'] < 2005\n",
+    "\n",
+    "## subset the main dataset using the indices. The method .copy is used to ensure that the relation to the main dataset is broken\n",
+    "df_train = df[idxs_train].copy()\n",
+    "df_test = df[~idxs_train].copy()\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "4oPohcizBV3J"
    },
-   "source": []
+   "source": [
+    "## Obtain the training indices\n"
+   ]
   },
   {
    "cell_type": "markdown",
