nao percebo nada disto

--- a/Assignment 1 23-24.ipynb
+++ b/Assignment 1 23-24.ipynb
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,33 @@
      "output_type": "stream",
      "text": [
       "333\n",
-      "[205, 36, 3, 30, 259, 102, 31, 153, 326, 46, 122, 297, 176, 219, 151, 113, 307, 78, 213, 330, 81, 325, 75, 42, 148, 105, 99, 89, 271, 313, 117, 8, 83, 192, 202, 111, 12, 97, 101, 24, 260, 104, 286, 74, 181, 254, 14, 21, 179, 255, 178, 130, 11, 22, 328, 195, 172, 248, 317, 119, 280, 137, 245, 300, 162, 171, 225, 238, 288, 217, 247, 125, 196, 37, 182, 227, 262, 93, 186, 56, 62, 263, 98, 61, 80, 261, 311, 278, 126, 211, 91, 233, 9, 94, 221, 140, 103, 309, 90, 289, 6, 252, 331, 296, 86, 226, 154, 250, 72, 118, 277, 333, 285, 27, 165, 64, 139, 144, 329, 218, 43, 284, 249, 308, 71, 87, 15, 138, 316, 287, 319, 70, 201, 48]\n"
+      "    species     island  culmen_length_mm  culmen_depth_mm  flipper_length_mm  \\\n",
+      "0    Adelie  Torgersen              39.1             18.7              181.0   \n",
+      "1    Adelie  Torgersen              39.5             17.4              186.0   \n",
+      "2    Adelie  Torgersen              40.3             18.0              195.0   \n",
+      "4    Adelie  Torgersen              36.7             19.3              193.0   \n",
+      "5    Adelie  Torgersen              39.3             20.6              190.0   \n",
+      "..      ...        ...               ...              ...                ...   \n",
+      "338  Gentoo     Biscoe              47.2             13.7              214.0   \n",
+      "340  Gentoo     Biscoe              46.8             14.3              215.0   \n",
+      "341  Gentoo     Biscoe              50.4             15.7              222.0   \n",
+      "342  Gentoo     Biscoe              45.2             14.8              212.0   \n",
+      "343  Gentoo     Biscoe              49.9             16.1              213.0   \n",
+      "\n",
+      "     body_mass_g     sex  \n",
+      "0         3750.0    MALE  \n",
+      "1         3800.0  FEMALE  \n",
+      "2         3250.0  FEMALE  \n",
+      "4         3450.0  FEMALE  \n",
+      "5         3650.0    MALE  \n",
+      "..           ...     ...  \n",
+      "338       4925.0  FEMALE  \n",
+      "340       4850.0  FEMALE  \n",
+      "341       5750.0    MALE  \n",
+      "342       5200.0  FEMALE  \n",
+      "343       5400.0    MALE  \n",
+      "\n",
+      "[333 rows x 7 columns]\n"
      ]
     },
     {
@@ -554,7 +580,7 @@
       "\u001b[1;31mIndexError\u001b[0m: indices are out-of-bounds",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 20\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(idxs_train)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m## subset the main dataset using the indices. The method .copy is used to ensure that the relation to the main dataset is broken\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m df_train \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39miloc[[idxs_train]]\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m     21\u001b[0m df_test \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39miloc[[\u001b[38;5;241m~\u001b[39midxs_train]]\u001b[38;5;241m.\u001b[39mcopy()\n",
+      "Cell \u001b[1;32mIn[28], line 20\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(df)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m## subset the main dataset using the indices. The method .copy is used to ensure that the relation to the main dataset is broken\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m df_train \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39miloc[[idxs_train]]\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m     21\u001b[0m df_test \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39miloc[[\u001b[38;5;241m~\u001b[39midxs_train]]\u001b[38;5;241m.\u001b[39mcopy()\n",
       "File \u001b[1;32m~\\miniconda3\\envs\\advanced-automation\\Lib\\site-packages\\pandas\\core\\indexing.py:1153\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1150\u001b[0m axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maxis \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m   1152\u001b[0m maybe_callable \u001b[38;5;241m=\u001b[39m com\u001b[38;5;241m.\u001b[39mapply_if_callable(key, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj)\n\u001b[1;32m-> 1153\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_axis(maybe_callable, axis\u001b[38;5;241m=\u001b[39maxis)\n",
       "File \u001b[1;32m~\\miniconda3\\envs\\advanced-automation\\Lib\\site-packages\\pandas\\core\\indexing.py:1705\u001b[0m, in \u001b[0;36m_iLocIndexer._getitem_axis\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1703\u001b[0m \u001b[38;5;66;03m# a list of integers\u001b[39;00m\n\u001b[0;32m   1704\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_list_like_indexer(key):\n\u001b[1;32m-> 1705\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_list_axis(key, axis\u001b[38;5;241m=\u001b[39maxis)\n\u001b[0;32m   1707\u001b[0m \u001b[38;5;66;03m# a single integer\u001b[39;00m\n\u001b[0;32m   1708\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1709\u001b[0m     key \u001b[38;5;241m=\u001b[39m item_from_zerodim(key)\n",
       "File \u001b[1;32m~\\miniconda3\\envs\\advanced-automation\\Lib\\site-packages\\pandas\\core\\indexing.py:1679\u001b[0m, in \u001b[0;36m_iLocIndexer._get_list_axis\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1676\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39m_take_with_is_copy(key, axis\u001b[38;5;241m=\u001b[39maxis)\n\u001b[0;32m   1677\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mIndexError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m   1678\u001b[0m     \u001b[38;5;66;03m# re-raise with different error message, e.g. test_getitem_ndarray_3d\u001b[39;00m\n\u001b[1;32m-> 1679\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIndexError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpositional indexers are out-of-bounds\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n",
@@ -577,7 +603,7 @@
     "      # appending the random number to the resultant list, if the condition is true\n",
     "      idxs_train.append(r)\n",
     "\n",
-    "print(idxs_train)\n",
+    "print(df)\n",
     "\n",
     "\n",
     "\n",
