First attempt at 2.i), this time for real

--- a/Assignment 1 23-24.ipynb
+++ b/Assignment 1 23-24.ipynb
@@ -472,73 +472,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     culmen_length_mm  culmen_depth_mm  flipper_length_mm  sex  \\\n",
-      "0                39.1             18.7              181.0    1   \n",
-      "1                39.5             17.4              186.0    0   \n",
-      "2                40.3             18.0              195.0    0   \n",
-      "4                36.7             19.3              193.0    0   \n",
-      "5                39.3             20.6              190.0    1   \n",
-      "..                ...              ...                ...  ...   \n",
-      "338              47.2             13.7              214.0    0   \n",
-      "340              46.8             14.3              215.0    0   \n",
-      "341              50.4             15.7              222.0    1   \n",
-      "342              45.2             14.8              212.0    0   \n",
-      "343              49.9             16.1              213.0    1   \n",
-      "\n",
-      "     species_Adelie  species_Chinstrap  species_Gentoo  island_Biscoe  \\\n",
-      "0                 1                  0               0              0   \n",
-      "1                 1                  0               0              0   \n",
-      "2                 1                  0               0              0   \n",
-      "4                 1                  0               0              0   \n",
-      "5                 1                  0               0              0   \n",
-      "..              ...                ...             ...            ...   \n",
-      "338               0                  0               1              1   \n",
-      "340               0                  0               1              1   \n",
-      "341               0                  0               1              1   \n",
-      "342               0                  0               1              1   \n",
-      "343               0                  0               1              1   \n",
-      "\n",
-      "     island_Dream  island_Torgersen  \n",
-      "0               0                 1  \n",
-      "1               0                 1  \n",
-      "2               0                 1  \n",
-      "4               0                 1  \n",
-      "5               0                 1  \n",
-      "..            ...               ...  \n",
-      "338             0                 0  \n",
-      "340             0                 0  \n",
-      "341             0                 0  \n",
-      "342             0                 0  \n",
-      "343             0                 0  \n",
-      "\n",
-      "[333 rows x 10 columns]\n",
-      "body_mass_g = -1277.9329 + 18.1893 * culmen_length_mm + 67.5754 * culmen_depth_mm + 16.2385 * flipper_length_mm\n",
+      "body_mass_g = -1277.9329 + 18.1893 * culmen_length_mm + 67.5754 * culmen_depth_mm + 16.2385 * flipper_length_mm + 387.2243 * sex + -242.4851 * species_Adelie + -502.7913 * species_Chinstrap + 745.2764 * species_Gentoo + 20.3889 * island_Biscoe + 7.2858 * island_Dream + -27.6747 * island_Torgersen\n",
       "R^2: 0.8752\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\tiago\\anaconda3\\envs\\advanced-automation\\Lib\\site-packages\\sklearn\\utils\\validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
-      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
-      "C:\\Users\\tiago\\anaconda3\\envs\\advanced-automation\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
-      "  if is_sparse(pd_dtype):\n",
-      "C:\\Users\\tiago\\anaconda3\\envs\\advanced-automation\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
-      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
-      "C:\\Users\\tiago\\anaconda3\\envs\\advanced-automation\\Lib\\site-packages\\sklearn\\utils\\validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
-      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
-      "C:\\Users\\tiago\\anaconda3\\envs\\advanced-automation\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
-      "  if is_sparse(pd_dtype):\n",
-      "C:\\Users\\tiago\\anaconda3\\envs\\advanced-automation\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
-      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n"
      ]
     }
    ],
@@ -546,14 +488,13 @@
     "df_2i = pd.get_dummies(df,columns = ['species', 'island'],dtype=int)\n",
     "df_2i['sex'] = (df_2i['sex'] == \"MALE\").astype(int)\n",
     "\n",
-    "X = df_2i.drop(['body_mass_g'],axis=1)\n",
+    "X = df_2i.drop(['body_mass_g'],axis=1).values\n",
     "y = df_2i['body_mass_g'].values.reshape(-1, 1)\n",
-    "print(X)\n",
     "\n",
     "regr = LinearRegression()\n",
     "regr.fit(X,y)\n",
     "\n",
-    "print('body_mass_g = {:.4f} + {:.4f} * culmen_length_mm + {:.4f} * culmen_depth_mm + {:.4f} * flipper_length_mm + {:.4f} * sex + {:.4f} * species_Adelie + {:.4f} * species_Chinstrap + {:.4f} * species_Gentoo + {:.4f} * island_Biscoe + {:.4f} * island_Dream + {:.4f} * island_Torgersen'.format(regr.intercept_[0], regr.coef_[0][0], regr.coef_[0][1], regr.coef_[0][2], regr.coef_[0][3], regr.coef_[0][4], regr.coef_[0][5], regr.coef_[0][6], regr.coef_[0][7], regr.coef_[0][8]))\n",
+    "print('body_mass_g = {:.4f} + {:.4f} * culmen_length_mm + {:.4f} * culmen_depth_mm + {:.4f} * flipper_length_mm + {:.4f} * sex + {:.4f} * species_Adelie + {:.4f} * species_Chinstrap + {:.4f} * species_Gentoo + {:.4f} * island_Biscoe + {:.4f} * island_Dream + {:.4f} * island_Torgersen'.format(regr.intercept_[0], regr.coef_[0][0], regr.coef_[0][1], regr.coef_[0][2], regr.coef_[0][3], regr.coef_[0][4], regr.coef_[0][5], regr.coef_[0][6], regr.coef_[0][7], regr.coef_[0][8], regr.coef_[0][9]))\n",
     "\n",
     "body_mass_g_pred = regr.predict(X)\n",
     "r2_value = r2_score(y, body_mass_g_pred)\n",
