--- a/Assignment 1 23-24.ipynb
+++ b/Assignment 1 23-24.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -215,7 +215,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -491,6 +491,7 @@
     "\n",
     "# Define X and y for the regression\n",
     "X = df_2i.drop(['body_mass_g'],axis=1).values\n",
+    "#X = df_2i.drop(['body_mass_g','species_Gentoo','island_Torgersen'],axis=1).values\n",
     "y = df_2i['body_mass_g'].values.reshape(-1, 1)\n",
     "\n",
     "# Initialize linear regression\n",
@@ -499,6 +500,7 @@
     "\n",
     "# Print linear regression expression\n",
     "print('body_mass_g = {:.4f} + {:.4f} * culmen_length_mm + {:.4f} * culmen_depth_mm + {:.4f} * flipper_length_mm + {:.4f} * sex + {:.4f} * species_Adelie + {:.4f} * species_Chinstrap + {:.4f} * species_Gentoo + {:.4f} * island_Biscoe + {:.4f} * island_Dream + {:.4f} * island_Torgersen'.format(regr.intercept_[0], regr.coef_[0][0], regr.coef_[0][1], regr.coef_[0][2], regr.coef_[0][3], regr.coef_[0][4], regr.coef_[0][5], regr.coef_[0][6], regr.coef_[0][7], regr.coef_[0][8], regr.coef_[0][9]))\n",
+    "#print('body_mass_g = {:.4f} + {:.4f} * culmen_length_mm + {:.4f} * culmen_depth_mm + {:.4f} * flipper_length_mm + {:.4f} * sex + {:.4f} * species_Adelie + {:.4f} * species_Chinstrap + {:.4f} * island_Biscoe + {:.4f} * island_Dream'.format(regr.intercept_[0], regr.coef_[0][0], regr.coef_[0][1], regr.coef_[0][2], regr.coef_[0][3], regr.coef_[0][4], regr.coef_[0][5], regr.coef_[0][6], regr.coef_[0][7]))\n",
     "\n",
     "# R^2 calculation\n",
     "body_mass_g_pred = regr.predict(X)\n",
@@ -537,67 +539,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 165,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "167\n",
-      "166\n"
-     ]
-    }
-   ],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimization terminated successfully.\n",
-      "         Current function value: 0.184601\n",
-      "         Iterations 9\n",
-      "                           Logit Regression Results                           \n",
-      "==============================================================================\n",
-      "Dep. Variable:                    sex   No. Observations:                  167\n",
-      "Model:                          Logit   Df Residuals:                      158\n",
-      "Method:                           MLE   Df Model:                            8\n",
-      "Date:                Sun, 03 Dec 2023   Pseudo R-squ.:                  0.7335\n",
-      "Time:                        19:58:33   Log-Likelihood:                -30.828\n",
-      "converged:                       True   LL-Null:                       -115.68\n",
-      "Covariance Type:            nonrobust   LLR p-value:                 1.487e-32\n",
-      "=====================================================================================\n",
-      "                        coef    std err          z      P>|z|      [0.025      0.975]\n",
-      "-------------------------------------------------------------------------------------\n",
-      "const               -61.8332        nan        nan        nan         nan         nan\n",
-      "species_Adelie      -14.3894   2.28e+07   -6.3e-07      1.000   -4.48e+07    4.48e+07\n",
-      "species_Chinstrap   -23.2412   2.29e+07  -1.02e-06      1.000   -4.48e+07    4.48e+07\n",
-      "species_Gentoo      -24.2027   2.29e+07  -1.06e-06      1.000   -4.48e+07    4.48e+07\n",
-      "island_Biscoe       -20.7394    1.6e+07   -1.3e-06      1.000   -3.13e+07    3.13e+07\n",
-      "island_Dream        -20.1331    1.6e+07  -1.26e-06      1.000   -3.13e+07    3.13e+07\n",
-      "island_Torgersen    -20.9608    1.6e+07  -1.31e-06      1.000   -3.13e+07    3.13e+07\n",
-      "culmen_length_mm      0.6033      0.178      3.388      0.001       0.254       0.952\n",
-      "culmen_depth_mm       1.7268      0.474      3.640      0.000       0.797       2.657\n",
-      "flipper_length_mm     0.1137      0.078      1.465      0.143      -0.038       0.266\n",
-      "body_mass_g           0.0055      0.001      3.774      0.000       0.003       0.008\n",
-      "=====================================================================================\n",
-      "\n",
-      "Possibly complete quasi-separation: A fraction 0.11 of observations can be\n",
-      "perfectly predicted. This might indicate that there is complete\n",
-      "quasi-separation. In this case some parameters will not be identified.\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -619,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 20,
    "metadata": {
     "id": "Zmk2OAC3w-W6"
    },
@@ -628,8 +572,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "234\n",
-      "99\n"
+      "Training set length: 234\n",
+      "Test set length: 99\n"
      ]
     }
    ],
@@ -649,9 +593,8 @@
     "## Create the train and test datasets\n",
     "df_train = df_3.iloc[idxs_train,:].copy()\n",
     "df_test = df_3.iloc[idxs_test,:].copy()\n",
-    "print(len(df_train))\n",
-    "print(len(df_test))\n",
-    "\n"
+    "print('Training set length:', len(df_train))\n",
+    "print('Test set length:', len(df_test))"
    ]
   },
   {
@@ -665,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -750,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -835,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
