Finished the 1st question

--- a/Assignment 1 23-24.ipynb
+++ b/Assignment 1 23-24.ipynb
@@ -74,7 +74,7 @@
     "id": "l3JRaXd28SUz"
    },
    "source": [
-    "In this case, we don't have enough information to know the actual relation between X and Y. That being said, the order could be either fractional (above 1), quadratic, cubic or any other of higher order. Since the cubic model has a higher order it will fit better to the data, regardless of the order of the relation between X and Y, when comparing with the linear model. In conclusion, <u>the training RSS is higher for the linear model</u>."
+    "In this case, we don't have enough information to know the actual relation between X and Y. That being said, the order could be either fractional (above 1), quadratic, cubic or any other of higher order. Since the cubic model has a higher order it will fit better to the data, regardless of the order of the relation between X and Y, when comparing with the linear model. In conclusion, <u>the training RSS is higher for the linear model</u>, in comparision with the cubic model."
    ]
   },
   {
@@ -91,7 +91,9 @@
    "metadata": {
     "id": "FWjI9xe36tk2"
    },
-   "source": []
+   "source": [
+    "As stated before, in this case we don't the order of the relation between X and Y, but the cubic model will always be more complex than the linear model regardless of the order of the relation between X and Y. This complexity will make the cubic model better fit the trainning data, but it will also make it overfit the test data, in the other hand, the linear model is less complex and therefore will have a worse fit of the data, but it will perfom better with the testing data. In short, <u> the testing RSS will be smaller for the linear model </u>, in comparision with the cubic model."
+   ]
   },
   {
    "cell_type": "markdown",
